# server

./: .env.example  agent.py  agent_tools.py  config.py  container.py  docker-compose.yml  log.py  main_mqtt.py  multi_agent_system.py  pyproject.toml  setup.txt  type.py
mcp_custom/: mcp_client.py  mcp_server.py
mcp_custom/service/: location.py  search.py  task.py  tts.py  weather.py
module/stt/: __init__.py  vin_ai_pho_whisper.py
mqtt/: __init__.py  client.py  server.py
mqtt/handlers/: __init__.py  audio.py  device.py
mqtt/utils/: __init__.py  helpers.py
